@@ -185,6 +185,7 @@ Chronological list of authors
   - Mingyi Xue
   - Meghan Osato
   - Anirvinya G
+  - Rishabh Shukla  
 
 External code
 -------------
